source/sass/blocks/header.scss
.header {
  width: 100%;
  position: relative;
  flex: 0 0 auto;
}

.header__inner {
  width: 100%;
  min-width: 964px;
  max-width: 1230px;
  padding-left: 30px;
  padding-right: 30px;
  min-height: 115px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;

  @media (max-width: $tablet-width) {
    min-width: 0;
    max-width: none;
    min-height: 0;
    height: 40px;
    padding: 0;
    margin-bottom: 34px;
  }

  @media (max-width: $mobile-width) {
    margin-bottom: 24px;
  }
}

.header__inner--notindex {
  margin-top: 10px;
}

.header__logo {
  margin-left: -83px;
  margin-top: 15px;
  cursor: pointer;

  @media (max-width: $tablet-width) {
    display: none;
  }
}

.header__logo--notindex {
  margin-top: -7px;
}

.header__menu-logo svg,
.header__logo svg {
  fill: $decor-1;
}

.header__logo-pointer {
  cursor: pointer;
}

// --------------- tablet-mobile menu ---------------
.header__menu {
  display: none;

  @media (max-width: $tablet-width) {
    min-height: 126px;
    padding-top: 10px;
    padding-left: 45px;
    padding-right: 45px;
    display: block;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  @media (max-width: $mobile-width) {
    min-height: 92px;
    padding-left: 15px;
    padding-right: 15px;
  }
}

.header__menu-btn {
  display: none;

  @media (max-width: $tablet-width) {
    display: block;
    border: none;
    background-color: transparent;
    cursor: pointer;
    z-index: 30;
    padding: 0;
  }

  @media (max-width: $mobile-width) {
    width: auto;
    padding: 0;
  }
}

.header__menu-btn--authorization {
  @media (max-width: $tablet-width) {
    display: none;
  }
}

.header__menu-btn--close {
  display: none;

  @media (max-width: $tablet-width) {
    display: block;
    width: 30px;
    height: 30px;
    margin-top: -10px;
    border: none;

    background-color: $decor-1;
    background-image: url("../img/close.svg");
    background-repeat: no-repeat;
    background-position: center;
    cursor: pointer;
    z-index: 31;
  }
}

.header__menu-btn--close svg{
  @media (max-width: $tablet-width) {
    display: none;
  }
}

.header__menu-logo {
  @media (max-width: $tablet-width) {
    margin-top: -5px;
    margin-left: -6px;
  }

  @media (max-width: $mobile-width) {
    transform: scale(0.8);
  }
}

.header__menu-logo--authorization {
  @media (max-width: $tablet-width) {
    display: block;
    margin: 0 auto;
  }
}

.header__menu-btn svg {
  @media (max-width: $tablet-width) {
    stroke: $black;
    fill: $white;
    stroke-width: 2px;
    stroke-linecap: round;
    stroke-linejoin: round;
  }
}

.header__menu-btn:hover > svg,
.header__menu-btn:focus > svg {
  @media (max-width: $tablet-width) {
    transform: rotate(360deg);
    transition: all 0.2s ease;
  }
}

.header__menu-btn:active > svg {
  @media (max-width: $tablet-width) {
    fill: rgba($white, 0.5)
  }
}

.header__dropdown {
  @media (max-width: $tablet-width) {
    width: 100%;
    min-width: 320px;
    max-width: 1023px;
    min-height: 600px;
    height: calc(100vh - 92px);
    display: none;
    flex-direction: column;
    position: relative;
    padding-top: 10px;
    padding-bottom: 148px;
    padding-left: 45px;
    padding-right: 45px;
    z-index: 30;
    background-color: $decor-1;
  }

  @media (max-width: $mobile-width) {
    padding-bottom: 148px;
    padding-left: 15px;
    padding-right: 15px;
  }
}

.header__dropdown--open {
  @media (max-width: $tablet-width) {
    display: flex;
    background-color: $decor-1;
  }
}

.header__dropdown--absolute {
  @media (max-width: $tablet-width) {
    position: absolute;
    top: 126px;
    left: 0;
  }

  @media (max-width: $mobile-width) {
    top: 92px;
  }
}

.header__dropdown--authorization {
  @media (max-width: $tablet-width) {
    display: none;
  }
}

.header__info-list {
  display: none;

  @media (max-width: $tablet-width) {
    display: block;
    @include list-reset;
  }
}

.header__info-item {
  @media (max-width: $tablet-width) {
    padding-top: 9px;
    padding-bottom: 10px;
  }
}

.header__info-link {
  @media (max-width: $tablet-width) {
    font-size: 18px;
    line-height: calc(23 / 18);
    color: rgba($white, 0.75);
  }
}

// --------------- dark-theme ---------------
.header__menu--dark-theme {
  @media (max-width: $tablet-width) {
    background-color: $decor-1;
  }
}

.header__menu-logo--dark-theme svg {
  @media (max-width: $tablet-width) {
    fill: $white;
  }
}

.header__menu-btn--dark-theme svg {
  @media (max-width: $tablet-width) {
    background-color: $decor-1;
    stroke: $white;
    fill: $decor-1;
  }
}

.user-nav__link,
.site-nav__link,
.header__info-link {
  @media (max-width: $tablet-width) {
    &:hover,
    &:focus {
      color: $decor-2;
    }

    &:active {
      color: rgba($decor-2, 0.4);
    }
  }
}

